<resources>
    <string name="app_name">smartpdam</string>

    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="email">Email</string>
    <string name="masukkan_email">Masukkan email</string>
    <string name="smartpdam">SmartPDAM</string>
    <string name="password">Password</string>
    <string name="masukkan_password">Masukkan password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="pemakaian_air_bulan_ini">Pemakaian Air Bulan Ini</string>
    <string name="biaya_pemakaian_bulan_ini">Biaya Pemakaian Bulan Ini</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="masukkan_nama">Masukkan nama</string>
    <string name="nama">Nama</string>
    <string name="rp_0">Rp. 0</string>
    <string name="_0_l">0 L</string>
    <string name="daftar"><u>Daftar!</u></string>
    <string name="januari">Januari</string>
    <string name="riwayat_pemakaian_air_tahun_ini">Riwayat Pemakaian Air Tahun Ini</string>
    <string name="bulan">Bulan</string>
    <string name="pemakaian_air">Pemakaian Air</string>
    <string name="biaya">Biaya</string>
    <string name="air">Air</string>
    <string name="februari">Februari</string>
    <string name="maret">Maret</string>
    <string name="april">April</string>
    <string name="mei">Mei</string>
    <string name="juni">Juni</string>
    <string name="agustus">Agustus</string>
    <string name="september">September</string>
    <string name="oktober">Oktober</string>
    <string name="november">November</string>
    <string name="desember">Desember</string>
    <string name="juli">Juli</string>
</resources>