<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtBulan"
            android:layout_height="40dp"
            android:layout_width="100dp"
            android:padding="5dp"
            android:text="@string/januari"
            android:textColor="@color/black"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txtAir"
            android:layout_height="40dp"
            android:textColor="@color/black"
            android:layout_width="100dp"
            android:padding="5dp"
            android:text="@string/_0_l"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txtBiaya"
            android:layout_height="40dp"
            android:textColor="@color/black"
            android:layout_width="150dp"
            android:padding="5dp"
            android:text="@string/rp_0"
            android:gravity="center"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>
</LinearLayout>