<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/bottomPanel"
    android:background="@android:color/transparent"
    app:behavior_hideable="false"
    app:behavior_peekHeight="70dp"
    app:layout_behavior="@string/bottom_sheet_behavior">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="-15dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="800dp"
            android:orientation="vertical"
            android:padding="16dp">
            <View
                android:layout_width="100dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@color/gray"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:text="@string/riwayat_pemakaian_air_tahun_ini"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:background="@color/primaryColor"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/bulan"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:gravity="center"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:background="@color/primaryColor"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_width="100dp"
                    android:padding="5dp"
                    android:text="@string/air"
                    android:gravity="center"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:background="@color/primaryColor"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_width="150dp"
                    android:padding="5dp"
                    android:text="@string/biaya"
                    android:gravity="center"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ListView
                    android:id="@+id/listView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </ListView>
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>