<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:id="@+id/drawerLayout">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/activity_menu"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"/>

    <!-- Nav Bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/primaryColor"
            android:clickable="true"
            android:focusable="true"
            app:navigationIcon="@drawable/ic_menu"
            app:title="SmartPDAM"
            app:titleTextColor="@color/white">
        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>

    <!-- Pemakaian Air Bulan Ini -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:background="@drawable/header"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            tools:ignore="UselessParent">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="50dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/pemakaian_air_bulan_ini">
            </TextView>
            <TextView
                android:id="@+id/air"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="80sp"
                android:text="@string/_0_l">
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <!-- Biaya Pemakaian Bulan Ini -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/panel"
            android:layout_marginTop="260dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/biaya_pemakaian_bulan_ini">
            </TextView>
            <TextView
                android:id="@+id/biaya"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:textSize="40sp"
                android:text="@string/rp_0">
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <!-- Line Chart -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="410dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical"
            android:background="@drawable/panel"
            tools:ignore="UselessParent">
            <com.github.mikephil.charting.charts.LineChart
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:id="@+id/lineChart">
            </com.github.mikephil.charting.charts.LineChart>

        </LinearLayout>
    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/activity_history" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.drawerlayout.widget.DrawerLayout>